2006-05-07  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/27136
	* tree-ssa-loop-niter.c (get_val_for): Correct function
	comment, assert requirements.
	(loop_niter_by_eval): Stop processing if the iterated
	value did not simplify.

	* gcc.dg/torture/pr27136.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@113601 138bc75d-0d04-0410-961f-82ee72b054a4